<resources>
    <string name="app_name">MRGS Map</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">StudentID</string>
    <string name="signin">Save ID</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_spec_select">Map Specification</string>
    <string name="monday">Input Monday Periods in order</string>
    <string name="timetable">TimeTable</string>
    <string name="open_timetable">Open TimeTable</string>
    <string name="ConfirmTimeTable">Confirm</string>
    <string name="period_1">Period 1</string>
    <string name="period_5">Period 5</string>
    <string name="period_4">Period 4</string>
    <string name="period_3">Period 3</string>
    <string name="period_2">Period 2</string>
    <string name="mrgs_logo">MRGS_LOGO</string>
    <string name="what_do_you_think_about_this_app">What do you think about this app?</string>
    <string name="how_could_this_app_be_improved_or_worked_on_further_let_me_know">How could this app be improved or worked on further, let me know!</string>
    <string name="submit">Submit</string>

    <string-array name="Options">
        <item>A Block</item>
        <item>B Block</item>
        <item>C Block</item>
        <item>D Block</item>
        <item>Front Field</item>
    </string-array>

</resources>